b=455243, weird behaviour with fonts with bad faces; r=jdaggett